--- a/aciu.html
+++ b/aciu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:23:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="675878adf597b3ae3c60cd3e" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -64,7 +64,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="w-embed w-iframe"><iframe src="https://embeds.beehiiv.com/361e17d7-3737-4bd0-824d-ea3fadbf25c5?slim=true" data-test-id="beehiiv-embed" height="52" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe></div>
             <div class="div-block-2">
               <a href="https://www.facebook.com/kunustudio.vilnius" target="_blank" class="social_image_wrapper w-inline-block"><img src="images/icons8-facebook.svg" loading="lazy" alt=""></a>
-              <a href="https://www.instagram.com/Kunustudio.Vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
+              <a href="https://www.instagram.com/kunustudio.vilnius" class="social_image_wrapper w-inline-block"><img src="images/icons8-instagram.svg" loading="lazy" alt=""></a>
             </div>
           </div>
           <div class="no-shrink-btn full-mobile">
