--- a/klases/mobilumo-treniruotes.html
+++ b/klases/mobilumo-treniruotes.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:23:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674ad26ba04f12f57f064163" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,15 +118,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           </div>
                         </div>
                         <div class="login-tablet-wrapper">
-                          <div class="wrapper-transparent-btn">
-                            <a href="../kontaktai.html" class="button-transparent w-inline-block">
+                          <div class="button-hero-wrapper">
+                            <a href="../wireframes/home-1.html" class="button-transparent w-inline-block">
                               <div class="clip-2">
                                 <div class="btn-banner-text">
-                                  <div class="btn-title-text dark-text">susisiekti</div>
+                                  <div class="btn-title-text dark-text">Susisiekti</div>
                                 </div>
                                 <div class="btn-banner-text button-text-bottom">
-                                  <div class="btn-title-text">susisiekti</div>
+                                  <div class="btn-title-text">Susisiekti</div>
                                 </div>
+                              </div>
+                              <div class="clip-2">
+                                <div class="button-icon"><img src="../images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
+                                <div class="button-icon button-icon-bottom"><img src="../images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                               </div>
                               <div class="button-hover-circle"></div>
                             </a>
@@ -177,15 +181,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </a>
                     </div>
                   </div>
-                  <div class="wrapper-transparent-btn">
-                    <a href="../kontaktai.html" class="button-transparent w-inline-block">
+                  <div class="button-hero-wrapper">
+                    <a href="../wireframes/home-1.html" class="button-transparent w-inline-block">
                       <div class="clip-2">
                         <div class="btn-banner-text">
-                          <div class="btn-title-text dark-text">susisiekti</div>
+                          <div class="btn-title-text dark-text">Susisiekti</div>
                         </div>
                         <div class="btn-banner-text button-text-bottom">
-                          <div class="btn-title-text">susisiekti</div>
+                          <div class="btn-title-text">Susisiekti</div>
                         </div>
+                      </div>
+                      <div class="clip-2">
+                        <div class="button-icon"><img src="../images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
+                        <div class="button-icon button-icon-bottom"><img src="../images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                       </div>
                       <div class="button-hover-circle"></div>
                     </a>
@@ -407,17 +415,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                     </div>
                                     <div class="field-block">
                                       <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
-                                      <div id="w-node-e04d204d-fa7e-a4f7-efb1-3e6e1c5b8ba1-ad843808" class="w-embed w-script">
-                                        <script></script>
-                                        <input type="hidden" id="utm_source" placeholder="utm_source" name="utm_source">
-                                        <input type="hidden" id="utm_medium" placeholder="utm_medium" name="utm_medium">
-                                        <input type="hidden" id="utm_campaign" placeholder="utm_campaign" name="utm_campaign">
-                                        <input type="hidden" id="utm_term" placeholder="utm_term" name="utm_term">
-                                        <input type="hidden" id="utm_content" placeholder="utm_content" name="utm_content">
-                                        <input type="hidden" id="referrer" placeholder="referrer" name="referrer">
-                                        <input type="hidden" id="gclid" placeholder="gclid" name="gclid">
-                                        <input type="hidden" id="fbclid" placeholder="fbclid" name="fbclid">
-                                      </div>
                                     </div>
                                   </div><input type="submit" data-wait="Please wait..." class="black-form-button w-button" value="Siųsti">
                                 </form>
