--- a/sokiu-pamoku-kainos.html
+++ b/sokiu-pamoku-kainos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 09:56:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:23:19 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbab" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -117,15 +117,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         </div>
                       </div>
                       <div class="login-tablet-wrapper">
-                        <div class="wrapper-transparent-btn">
-                          <a href="kontaktai.html" class="button-transparent w-inline-block">
+                        <div class="button-hero-wrapper">
+                          <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
                             <div class="clip-2">
                               <div class="btn-banner-text">
-                                <div class="btn-title-text dark-text">susisiekti</div>
+                                <div class="btn-title-text dark-text">Susisiekti</div>
                               </div>
                               <div class="btn-banner-text button-text-bottom">
-                                <div class="btn-title-text">susisiekti</div>
+                                <div class="btn-title-text">Susisiekti</div>
                               </div>
+                            </div>
+                            <div class="clip-2">
+                              <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
+                              <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                             </div>
                             <div class="button-hover-circle"></div>
                           </a>
@@ -176,15 +180,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </a>
                   </div>
                 </div>
-                <div class="wrapper-transparent-btn">
-                  <a href="kontaktai.html" class="button-transparent w-inline-block">
+                <div class="button-hero-wrapper">
+                  <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
                     <div class="clip-2">
                       <div class="btn-banner-text">
-                        <div class="btn-title-text dark-text">susisiekti</div>
+                        <div class="btn-title-text dark-text">Susisiekti</div>
                       </div>
                       <div class="btn-banner-text button-text-bottom">
-                        <div class="btn-title-text">susisiekti</div>
+                        <div class="btn-title-text">Susisiekti</div>
                       </div>
+                    </div>
+                    <div class="clip-2">
+                      <div class="button-icon"><img src="images/Vector-6_1Vector-6.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
+                      <div class="button-icon button-icon-bottom"><img src="images/Vector-12_1Vector-12.png" loading="lazy" alt="Png Icon" class="icon-top"></div>
                     </div>
                     <div class="button-hover-circle"></div>
                   </a>
