--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:23:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:34:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,7 +118,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                       <div class="login-tablet-wrapper">
                         <div class="button-hero-wrapper">
-                          <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+                          <a href="kontaktai.html" aria-current="page" class="button-transparent w-inline-block w--current">
                             <div class="clip-2">
                               <div class="btn-banner-text">
                                 <div class="btn-title-text dark-text">Susisiekti</div>
@@ -181,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
                 <div class="button-hero-wrapper">
-                  <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+                  <a href="kontaktai.html" aria-current="page" class="button-transparent w-inline-block w--current">
                     <div class="clip-2">
                       <div class="btn-banner-text">
                         <div class="btn-title-text dark-text">Susisiekti</div>
@@ -271,7 +271,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone-Nr" data-name="Phone Nr" placeholder="Telefonas" type="tel" id="Phone-Nr">
                               </div>
                               <div class="field-block">
-                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
+                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
                               </div>
                             </div><input type="submit" data-wait="Please wait..." class="black-form-button w-button" value="Siųsti">
                           </form>
