--- a/aciu.html
+++ b/aciu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:23:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:34:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="675878adf597b3ae3c60cd3e" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -50,7 +50,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="clip-group-section">
     <div class="_404-content">
       <div data-w-id="350a0884-6aec-5de8-38cd-5c7d619a0495" style="opacity:0" class="_404-logo-wrapper-2">
-        <a href="wireframes/home-1.html" class="brand-logo-2 w-nav-brand"><img src="images/white.svg" loading="lazy" width="100" height="24" alt="" class="kunu-logo"></a>
+        <a href="index.html" class="brand-logo-2 w-nav-brand"><img src="images/white.svg" loading="lazy" width="100" height="24" alt="" class="kunu-logo"></a>
       </div>
       <div class="_404-wrapper">
         <h1 data-w-id="350a0884-6aec-5de8-38cd-5c7d619a0499" style="opacity:0" class="_404-title text-white-2">ačiū</h1>
