--- a/privatus-renginiai-choreografija.html
+++ b/privatus-renginiai-choreografija.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:23:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:34:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67580536b73d3e207f6c0446" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -118,7 +118,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                       <div class="login-tablet-wrapper">
                         <div class="button-hero-wrapper">
-                          <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+                          <a href="kontaktai.html" class="button-transparent w-inline-block">
                             <div class="clip-2">
                               <div class="btn-banner-text">
                                 <div class="btn-title-text dark-text">Susisiekti</div>
@@ -181,7 +181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
                 <div class="button-hero-wrapper">
-                  <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+                  <a href="kontaktai.html" class="button-transparent w-inline-block">
                     <div class="clip-2">
                       <div class="btn-banner-text">
                         <div class="btn-title-text dark-text">Susisiekti</div>
