--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:34:00 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 10:40:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -262,16 +262,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <form method="post" class="form w-node-d46d82c1-40f2-314f-f684-5074ad843809-ad843808" data-netlify="true" name="wf-form-Contact-form" data-name="Contact form" action="/aciu" id="wf-form-Contact-form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="674829a03ff763632940d900" data-wf-element-id="d46d82c1-40f2-314f-f684-5074ad843809">
                             <div data-netlify="true" class="feild-form-wrapper">
                               <div class="field-block">
-                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808" class="field-label-3 mb-0">Vardas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="Vardas" type="text" id="Name" required="">
+                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808" class="field-label-3 mb-0">Vardas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808 w-input" maxlength="256" name="Name" data-name="Name" placeholder="Vardas" type="text" id="Name-2" required="">
                               </div>
                               <div id="w-node-d46d82c1-40f2-314f-f684-5074ad84380f-ad843808" class="field-block">
-                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email-6" data-name="Email 6" placeholder="El. Paštas" type="email" id="Email-6" required="">
+                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="El. Paštas" type="email" id="Email-7" required="">
                               </div>
                               <div id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc6-ad843808" class="field-block">
-                                <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone-Nr" data-name="Phone Nr" placeholder="Telefonas" type="tel" id="Phone-Nr">
+                                <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone">
                               </div>
                               <div class="field-block">
-                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-2" name="Message-2" maxlength="5000" data-name="Message 2" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
+                                <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-3" name="Message" maxlength="5000" data-name="Message" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
                               </div>
                             </div><input type="submit" data-wait="Please wait..." class="black-form-button w-button" value="Siųsti">
                           </form>
