--- a/sokio-pamokos.html
+++ b/sokio-pamokos.html
@@ -237,7 +237,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676bd-431bdb82" class="banner-hero-content">
         <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676be-431bdb82" class="hero-top">
           <div class="hero-intro">
-            <h1 data-w-id="b10566e5-96f8-834d-eee0-44cdabe676c0" style="opacity:0" class="title-3 class-2-title">SUSIPAžinkite su mūsų Mokytojais</h1>
+            <h1 data-w-id="b10566e5-96f8-834d-eee0-44cdabe676c0" style="opacity:0" class="title-3 class-2-title">Šokio pamokos vaikams ir suaugusiems Vilniuje</h1>
           </div>
         </div>
       </div>
