--- a/klases/gimnastikos-treniruotes.html
+++ b/klases/gimnastikos-treniruotes.html
@@ -235,7 +235,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
               <h1 data-w-id="796d92aa-f8a7-0728-fa28-252c6cf43659" style="opacity:0" class="blog-details-title">GIMNASTIKOS ir LAKSTUMO <br>TRENIRUOTės VAIKAMS</h1>
               <p data-w-id="dc5c9955-b493-3b21-e5a4-51b9554564c6" class="banner-class-description">Šie 5-8 metų vaikams skirti užsiėmimai padės stiprinti jėgą, lankstumą ir koordinaciją smagiu ir įtraukiančiu būdu. <br><br>Pagal amžių atitinkančius pratimus, tempimus ir pagrindinius gimnastikos įgūdžius vaikai kuria stipru judėjimo pagrindą, stiprina pasitikėjimą savimi ir kūno suvokimą. Šie užsiėmimai suteikia saugią ir palaikančią aplinką, kurioje vaikai gali tobulinti savo fizinius gebėjimus ir mėgautis aktyviu gyvenimo būdu!<br></p>
-              <p data-w-id="090386ea-50e8-aa6a-a03c-3b1bc1201806" style="opacity:0" class="banner-class-description">‍<br>Treniruotės vyksta karta per savaitę ketvirtadieniais.<br></p>
+              <p data-w-id="090386ea-50e8-aa6a-a03c-3b1bc1201806" style="opacity:0" class="banner-class-description">‍<br>Treniruotės vyksta karta per savaitę pirmadieniais.<br></p>
             </div>
             <div data-w-id="796d92aa-f8a7-0728-fa28-252c6cf43671" style="opacity:0" class="dance-instructor">
               <a href="#mokytoja" class="overlay-avatar w-inline-block">
