--- a/klases/siuolaikinio-sokio-pamokos.html
+++ b/klases/siuolaikinio-sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 12 2024 12:15:15 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jan 06 2025 16:29:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674ad95ee29365b448d80118" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -241,7 +241,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <a href="#mokytoja" class="overlay-avatar w-inline-block">
                 <div id="w-node-_796d92aa-f8a7-0728-fa28-252c6cf43679-48d80118" class="related-vacation-info">
                   <div class="ava-text-wrapper">
-                    <h4 class="trainer-name text-white">Eglė Kraujalė</h4>
+                    <h4 class="trainer-name text-white">Jolita Svidraitė</h4>
                     <h4 class="trainer-name text-white">Eglė Kraujalė</h4>
                   </div>
                   <div id="w-node-_796d92aa-f8a7-0728-fa28-252c6cf4367f-48d80118" class="job-wrap">
@@ -325,13 +325,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="clip-subtitle">
                       <h6 data-w-id="796d92aa-f8a7-0728-fa28-252c6cf436ec" style="opacity:0" class="h6-subtitle-text">APIE MOKYTOJA</h6>
                     </div>
-                    <div data-w-id="36270f02-5776-a57a-1cec-5b7522cd4160" class="portfolio-rich-text w-richtext">
-                      <h2>Eglė Kraujalė</h2>
-                      <p>Eglės požiūris į šokį kaip identiteto ir kūrybinės išraiškos formą išryškina kūno kaip komunikacijos priemonės svarbą. Ji pabrėžia, kad mūsų kūnai perteikia emocijas ir patirtis, kurios negali būti visiškai apibūdintos žodžiais.</p>
-                      <p>,,Pamokose kviečiu atverti duris savo savo kūno pažinimui. Naudoju meditacijos formas, kūrybines užduotis, improvizaciją, skatinu lavinti lankstumą ir taip pat taikau terapinius metodus”, – pasakojo viena iš studijos mokytojų.</p>
-                      <p>– 2020–2023 m. šokio pedagogikos bakalauro studijos Vilniaus kolegijoje </p>
-                      <p>– 2021–2022 m. šokio erasmus studijos Lisabonos universitete</p>
-                      <p>– 2024 Integruoto kūno judesio terapijos studijos Linda Hartley institute (IBMT)</p>
+                    <div data-w-id="8dbd4131-cb99-a01d-69f1-01a11fa02ca5" class="portfolio-rich-text w-richtext">
+                      <h2>Jolita Svidraitė</h2>
+                      <p>,,Esu aukštos kvalifikacijos ir įvairiapusė šokėja, turinti tvirtą pagrindą tiek klasikinio, tiek šiuolaikinio šokio srityse. Įgijau šokio menininko diplomą Nacionalinėje M. K. Čiurlionio menų mokykloje, kurioje mokiausi nuo 2012 iki 2021 metų. Neseniai baigiau šokio bakalauro studijas Barselonos Menų institute, bendradarbiaujant su Liverpulio John Moores universitetu (2021-2024).”</p>
+                      <p>– 2012–2021 m. menininko diplomas M. K. Čiurlionio menų mokykloje. </p>
+                      <p>– 2021–2024 m. šokio bakalauro studijos Barselonos universiteto menų institute, Ispanijoje.</p>
                     </div>
                   </div>
                 </div>
